--- a/Prototype/MediBook.Android/Resources/Layout/AppointmentScreen.axml
+++ b/Prototype/MediBook.Android/Resources/Layout/AppointmentScreen.axml
@@ -64,7 +64,7 @@
         android:minWidth="25px"
         android:minHeight="25px"
         android:layout_width="match_parent"
-        android:layout_height="302.3dp"
+        android:layout_height="wrap_content"
         android:id="@+id/linearLayout4"
         android:layout_marginTop="10dp">
         <LinearLayout
@@ -79,28 +79,28 @@
                 android:text="Type"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:layout_width="wrap_content"
-                android:layout_height="25dp"
+                android:layout_height="20dp"
                 android:id="@+id/textView4"
                 android:layout_marginBottom="10dp" />
             <TextView
                 android:text="Description"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:layout_width="match_parent"
-                android:layout_height="90dp"
+                android:layout_height="70dp"
                 android:id="@+id/textView5"
                 android:layout_marginBottom="10dp" />
             <TextView
                 android:text="When"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="45dp"
                 android:id="@+id/textView6"
                 android:layout_marginBottom="10dp" />
             <TextView
                 android:text="Duration"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="20dp"
                 android:id="@+id/textView6"
                 android:layout_marginBottom="10dp" />
             <TextView
@@ -121,7 +121,7 @@
                 android:text="Sample Appointment"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:layout_width="match_parent"
-                android:layout_height="25.0dp"
+                android:layout_height="20dp"
                 android:id="@+id/appointmentType"
                 android:textStyle="bold"
                 android:layout_marginBottom="10dp" />
@@ -129,7 +129,7 @@
                 android:text="Short description about the appointment.Short description about the appointment."
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:layout_width="match_parent"
-                android:layout_height="90dp"
+                android:layout_height="70dp"
                 android:id="@+id/appointmentDescription"
                 android:textStyle="bold"
                 android:layout_marginBottom="10dp" />
@@ -137,7 +137,7 @@
                 android:text="Fri, Apr 22, 2014 at 10:00 AM"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="45dp"
                 android:id="@+id/appointmentTime"
                 android:textStyle="bold"
                 android:layout_marginBottom="10dp" />
@@ -145,7 +145,7 @@
                 android:text="10 minutes"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="20dp"
                 android:id="@+id/appointmentDuration"
                 android:textStyle="bold"
                 android:layout_marginBottom="10dp" />
@@ -164,19 +164,30 @@
         android:minWidth="25px"
         android:minHeight="25px"
         android:layout_width="match_parent"
-        android:layout_height="110dp"
+        android:layout_height="wrap_content"
         android:id="@+id/linearLayout7">
         <Button
             android:text="Reschedule Appointment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/scheduleButton"
-            android:onClick="ScheduleOrReshedule" />
+            android:onClick="ScheduleOrReshedule"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/button_selector" />
+        <Button
+            android:text="Cancel Appointment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/cancelButton"
+            android:onClick="CancelAppointment"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/button_selector" />
         <Button
             android:text="Add to Calander"
             android:layout_width="match_parent"
             android:id="@+id/addToCalanderButton"
             android:layout_height="wrap_content"
-            android:onClick="AddToCalander" />
+            android:onClick="AddToCalander"
+            android:background="@drawable/button_selector" />
     </LinearLayout>
 </LinearLayout>
