--- a/Prototype/MediBook.Android/Resources/Layout/AppointmentScreen.axml
+++ b/Prototype/MediBook.Android/Resources/Layout/AppointmentScreen.axml
@@ -183,11 +183,11 @@
             android:layout_marginBottom="10dp"
             android:background="@drawable/button_selector" />
         <Button
-            android:text="Add to Calander"
+            android:text="Add to Calendar"
             android:layout_width="match_parent"
-            android:id="@+id/addToCalanderButton"
+            android:id="@+id/addToCalendarButton"
             android:layout_height="wrap_content"
-            android:onClick="AddToCalander"
+            android:onClick="AddOrRemoveFromCalendarButtonClicked"
             android:background="@drawable/button_selector" />
     </LinearLayout>
 </LinearLayout>
