--- a/Prototype/MediBook.Android/Resources/Layout/AppointmentList.axml
+++ b/Prototype/MediBook.Android/Resources/Layout/AppointmentList.axml
@@ -5,5 +5,7 @@
     <ListView
         android:id="@android:id/list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:dividerHeight="10.0sp"
+        android:background="#000000" />
 </RelativeLayout>
